# House-Price-Prediction-Test-App

./: Makefile  pyproject.toml
.github/actions/build-application/: action.yml
.github/workflows/: lint.yaml  workflows.yaml
src/: runner.py
src/config/: .env  constants.py  db.py  model.py
src/db/: db.sqlite  db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
